added extention screenshots

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="header">
             <h1>Framework Dev Assist</h1>
             <div class="header-icons">
-                <a href="" id="star-btn" class="icon-btn">
+                <a href="https://github.com/theshreyanshpanchal/Framework-Dev-Assist" target="_blank" id="star-btn" class="icon-btn">
                     <img src="icons/system/star.png" alt="Star">
                 </a>
                 <button id="reset-btn" class="icon-btn">
